# framework64-starter

./: README.md
game/: .gitignore  CMakeLists.txt  package.json
game/src/: CMakeLists.txt  game.h
scripts/: ConfigureProject.js
src/: CMakeLists.txt
